@@ -319,27 +319,13 @@ schema = Schema((
             schemata="default",
             required_for_published=True,
             ),
-    ReferenceField(
+    EEAReferenceField(
             name='relatedItems',
-            widget=ReferenceBrowserWidget(
-                label="External data references",
-                addable=True,
-                description="References to external data sets, available on other websites or via other organisations' communication channels.",
-                label_msgid='indicators_label_relatedItems',
-                description_msgid='indicators_help_relatedItems',
-                i18n_domain='indicators',
-                keepReferencesOnCopy=True,
-                ),
-            allowed_types=('ExternalDataSpec',),
-            schemata="DataSpecs",
-            multiValued=1,
-            relationship='specification_relateditems',
-            ),
-    EEAReferenceField('relatedItems',
             schemata='DataSpecs',
             relationship='relatesTo',
             multivalued=True,
             isMetadata=False,
+            keepReferencesOnCopy=True,
             widget=EEAReferenceBrowserWidget(
                 label='External data references',
                 description="References to external data sets, available on other websites or via other organisations' communication channels.",
